# HLDB

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: CMakeLists.txt  gtest.cmake
cmake_module/: googletest.cmake  iuring.cmake
src/: CMakeLists.txt  file.cpp  file.h  log.h
src/include/: file.h  log.h  memory_pool.h  skiplist.h  status.h
src/test/: CMakeLists.txt  file_test.cpp  skiplist_test.cpp
